--- a/Assignment/TEAM LEADER - MANOJKUMAR C/ASSESMENT1.ipynb
+++ b/Assignment/TEAM LEADER - MANOJKUMAR C/ASSESMENT1.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Hi', 'there', 'nisha!']\n"
+      "['Hi', 'there', 'sam!']\n"
      ]
     }
    ],
@@ -116,7 +116,7 @@
    },
    "outputs": [],
    "source": [
-    "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'Hi']}]}]}"
+    "d = {'k1':[1,2,3,{'tricky':['oh','man','inception',{'target':[1,2,3,'Hello']}]}]}"
    ]
   },
   {
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi\n"
+      "Hello\n"
      ]
     }
    ],
